RESOLVED FIXED263989
CVE-2023-42956 Applying wavy underline text decoration on <del> text will hang if the font size is zero
https://bugs.webkit.org/show_bug.cgi?id=263989
Summary Applying wavy underline text decoration on <del> text will hang if the font s...
Said Abou-Hallawa
Reported 2023-10-31 11:43:34 PDT
Created attachment 468430 [details] test case Open the attached test case. Result: WebKit will hang and eventually will jetsam.
Attachments
test case (150 bytes, text/html)
2023-10-31 11:43 PDT, Said Abou-Hallawa
no flags
Said Abou-Hallawa
Comment 1 2023-10-31 11:44:04 PDT
Said Abou-Hallawa
Comment 2 2023-10-31 11:47:39 PDT
Said Abou-Hallawa
Comment 3 2023-10-31 12:14:29 PDT
EWS
Comment 4 2023-10-31 15:44:37 PDT
Committed 270033@main (1034f6e16761): <https://commits.webkit.org/270033@main> Reviewed commits have been landed. Closing PR #19787 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.