Applying wavy underline text decoration on <del> text will hang if the font size is zero https://bugs.webkit.org/show_bug.cgi?id=263989 rdar://113930569

Reviewed by Simon Fraser.

This should complete the intended fix of .

TextDecorationPainter::paintLineThrough() can still call strokeWavyTextDecoration()
even if the font size is zero. This part was missed from 269493@main.

Like bug 260372, text within <del> tags and zero font size will cause WebKit to
hang and eventually jetsam by the system. The for-loop in strokeWavyTextDecoration()
will never terminate.

strokeWavyTextDecoration() should return if any of its parameters is zero.

* LayoutTests/fast/text/del-text-zero-size-wavy-style-expected.txt: Added.
* LayoutTests/fast/text/del-text-zero-size-wavy-style.html: Added.
* LayoutTests/fast/text/text-zero-size-wavy-style.html:
* Source/WebCore/rendering/TextDecorationPainter.cpp:
(WebCore::strokeWavyTextDecoration):

Canonical link: https://commits.webkit.org/270033@main